--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 body{
     font-family: 'Lato', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
     font-family: 'Roboto Slab', serif;
+}
+section{height: 550px;}
+.top_banner{
+    background-image: url(./images/top-banner.png);
+    background-repeat: no-repeat;
 }
 .name-focus{
     color: orange;
@@ -19,5 +25,16 @@ h1{
 }
 .right_side img{
     width: 100%;
+    height: 450px;
     
+}
+.hire_me_button {
+    text-decoration: none;
+    font-size: 18px;
+    background-image: linear-gradient(45deg,#fa6d59, #d26e6ed9);
+    padding: 10px;
+    border-radius: 10px;
+    font-weight: bold;
+    color: white;
+    margin-top: 5;
 }
